--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -130,9 +130,10 @@
 }
 
 .sidebar .author__name {
-  // @include breakpoint($medium) {
-  //   font-size: $type-size-3;
-  // }
+  @include breakpoint($medium) {
+    // font-size: $type-size-3;
+    font-size: $type-size-4;
+  }
   font-family: $sans-serif;
   font-size: $type-size-4;
 }
