重构脚本，将js代码统一归档，并生成相关文档，完善引用按钮

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,6 @@
 <script src="assets/js/main.min.js"></script>
+<script src="assets/data/bibtex-data.js"></script>
+<script src="assets/js/bibtex-citation.js"></script>
 
 {% include analytics.html %}
 {% include fetch_google_scholar_stats.html %}
