--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -38,6 +38,7 @@
 @import "vendor/font-awesome/solid";
 @import "vendor/font-awesome/brands";
 @import "vendor/magnific-popup/magnific-popup";
+@import "bibtex-citation";
 @import "print";
 
 .paper-box {
