--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -10,11 +10,11 @@
   width: 100%;
   clear: both;
   /* sticky footer fix start */
-  position: absolute;
+  position: relative;
   bottom: 0em;
   height: auto;
   /* sticky footer fix end */
-  margin-top: 5em;
+  margin-top: 6em;
   color: mix(#fff, $gray, 25%);
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
