加入页脚处的访客地图

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,5 +26,10 @@
         {% endif %}
       </small>
     </div>
+    
+    <!-- ClusterMaps Visitor Statistics -->
+    <div class="page__footer-clustermaps" style="text-align: center; margin-top: 1em;">
+      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&cl=ffffff&w=a"></script>
+    </div>
   </footer>
 </div>
