--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
     </div>
     
     <!-- ClusterMaps Visitor Statistics -->
-    <div class="page__footer-clustermaps" style="text-align: center; margin-top: 1em;">
+    <div class="page__footer-clustermaps" style="text-align: center; margin: 2em auto 1em; width: 100%;">
       <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&cl=ffffff&w=a"></script>
     </div>
   </footer>
