调整访客地图尺寸

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 <div class="page__footer">
   <footer>
+    <!-- ClusterMaps Visitor Statistics -->
+    <div class="page__footer-clustermaps" style="text-align: center; margin: 1em auto; width: 60%; max-width: 300px;">
+      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&cl=ffffff&w=a"></script>
+    </div>
+
     <div class="page__footer-follow">
       <ul class="social-icons">
         {% if site.author.github %}
@@ -25,11 +30,6 @@
           <br>Website source code available on <a href="https://github.com/{{ site.repository }}" rel="nofollow">GitHub</a>.
         {% endif %}
       </small>
-    </div>
-    
-    <!-- ClusterMaps Visitor Statistics -->
-    <div class="page__footer-clustermaps" style="text-align: center; margin: 2em auto 1em; width: 100%;">
-      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&cl=ffffff&w=a"></script>
     </div>
   </footer>
 </div>
