--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <footer>
     <!-- ClusterMaps Visitor Statistics -->
     <div class="page__footer-clustermaps" style="text-align: center; margin: 1em auto; width: 60%; max-width: 300px;">
-      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&cl=ffffff&w=a"></script>
+      <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=6f808f&w=300&t=tt&d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&co=f2f3f3&ct=9ba1a6&cmo=e34949"></script>
     </div>
 
     <div class="page__footer-follow">
