--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,6 +15,21 @@
         min-height: 167px;
       }
       
+      .page__footer-clustermaps {
+        aspect-ratio: 9 / 5;
+        width: 100%;
+        max-width: 360px;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      
+      .page__footer-clustermaps script {
+        width: 100%;
+        height: 100%;
+      }
+      
       .page__footer-right {
         margin-left: 1.5rem;
         min-width: 300px;
@@ -33,6 +48,10 @@
           min-width: auto;
           width: 100%;
           max-width: 400px;
+        }
+        
+        .page__footer-clustermaps {
+          max-width: 360px;
         }
         
         .page__footer-right {
