--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,12 +5,12 @@
       <!-- Left Column: Visitor Statistics -->
       <div class="page__footer-left">
         <div class="page__footer-clustermaps">
-          <script type="text/javascript" id="clustrmaps" src="cdn.clustrmaps.com/map_v2.js?cl=6f808f&t=tt&d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&co=f2f3f3&ct=9ba1a6&cmo=e34949"></script>
+          <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=6f808f&t=tt&d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&co=f2f3f3&ct=9ba1a6&cmo=e34949"></script>
           <!-- cdn.clustrmaps.com/map_v2.js?cl=6f808f&t=tt&d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&co=f2f3f3&ct=9ba1a6&cmo=e34949 -->
-           <!-- https://mapmyvisitors.com/map.js?cl=6f808f&w=300&t=tt&d=w7cjBVWXkj-i_LEaFdHrWjwQGauzbp1XWI3kyXLhbxA&co=f2f3f3&ct=9ba1a6&cmo=e34949&cmn=3fdd3f -->
+          <!-- https://mapmyvisitors.com/map.js?cl=6f808f&w=300&t=tt&d=w7cjBVWXkj-i_LEaFdHrWjwQGauzbp1XWI3kyXLhbxA&co=f2f3f3&ct=9ba1a6&cmo=e34949&cmn=3fdd3f -->
         </div>
       </div>
-
+      
       <!-- Right Column: Other Content -->
       <div class="page__footer-right">
         <div class="page__footer-follow">
