调整谷歌学术引用量相关js代码执行时机

--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -1,5 +1,5 @@
 <script>
-  $(document).ready(function () {
+  $(window).on('load', function () {
       {% if site.google_scholar_stats_use_cdn %}
       var gsDataBaseUrl = 'https://cdn.jsdelivr.net/gh/{{ site.repository }}@'
       {% else %}
