--- a/_includes/fetch_google_scholar_stats.html
+++ b/_includes/fetch_google_scholar_stats.html
@@ -1,5 +1,32 @@
 <script>
   $(window).on('load', function () {
+    setTimeout(function() {
+      {% if site.google_scholar_stats_use_cdn %}
+      var gsDataBaseUrl = 'https://cdn.jsdelivr.net/gh/{{ site.repository }}@'
+      {% else %}
+      var gsDataBaseUrl = 'https://raw.githubusercontent.com/{{ site.repository }}/'
+      {% endif %}
+      $.getJSON(gsDataBaseUrl + "google-scholar-stats/gs_data.json", function (data) {
+          var totalCitation = data['citedby'];
+          var totalCitElement = document.getElementById('total_cit');
+          if (totalCitElement) {
+            totalCitElement.innerHTML = totalCitation;
+          }
+          
+          var citationEles = document.getElementsByClassName('show_paper_citations');
+          Array.prototype.forEach.call(citationEles, element => {
+              var paperId = element.getAttribute('data');
+              if (data['publications'] && data['publications'][paperId]) {
+                var numCitations = data['publications'][paperId]['num_citations'];
+                if (numCitations > 0) {
+                  element.innerHTML = '&nbsp;|&nbsp;Citations: ' + numCitations;
+                }
+              }
+          });
+      });
+    }, 500); // Delay execution by 500ms to ensure all elements are loaded
+  });
+</script>ent).ready(function () {
       {% if site.google_scholar_stats_use_cdn %}
       var gsDataBaseUrl = 'https://cdn.jsdelivr.net/gh/{{ site.repository }}@'
       {% else %}
