格式化代码，微调内容

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,5 +2,4 @@
 <script src="assets/data/bibtex-data.js"></script>
 <script src="assets/js/bibtex-citation.js"></script>
 
-{% include analytics.html %}
-{% include fetch_google_scholar_stats.html %}
+{% include analytics.html %} {% include fetch_google_scholar_stats.html %}
