--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,14 @@
 <div class="page__footer">
   <footer>
     <div class="page__footer-container">
-      
       <!-- Left Column: Visitor Statistics -->
       <div class="page__footer-left">
         <div class="page__footer-clustermaps">
-          <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=6f808f&t=tt&d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&co=f2f3f3&ct=9ba1a6&cmo=e34949"></script>
+          <script
+            type="text/javascript"
+            id="clustrmaps"
+            src="//cdn.clustrmaps.com/map_v2.js?cl=6f808f&t=tt&d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&co=f2f3f3&ct=9ba1a6&cmo=e34949"
+          ></script>
           <!-- //cdn.clustrmaps.com/map_v2.js?cl=6f808f&t=tt&d=vaAZzEhnA94ccAwI2G-Ul3ksfJrJSJSF-WJo0zXOvhs&co=f2f3f3&ct=9ba1a6&cmo=e34949 -->
           <!-- //mapmyvisitors.com/map.js?cl=6f808f&w=300&t=tt&d=w7cjBVWXkj-i_LEaFdHrWjwQGauzbp1XWI3kyXLhbxA&co=f2f3f3&ct=9ba1a6&cmo=e34949&cmn=3fdd3f -->
         </div>
@@ -16,31 +19,52 @@
         <div class="page__footer-follow">
           <ul class="social-icons">
             {% if site.author.github %}
-              <li><a href="https://github.com/{{ site.author.github }}" rel="nofollow noopener noreferrer"><i class="fab fa-fw fa-github" aria-hidden="true"></i> GitHub</a></li>
-            {% endif %}
-
-            {% if site.author.googlescholar %}
-              <li><a href="{{ site.author.googlescholar }}" rel="nofollow noopener noreferrer"><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i> Google Scholar</a></li>
-            {% endif %}
-
-            {% if site.author.email %}
-              <li><a href="mailto:{{ site.author.email }}" rel="nofollow noopener noreferrer"><i class="fas fa-fw fa-envelope-square" aria-hidden="true"></i> Email</a></li>
+            <li>
+              <a
+                href="https://github.com/{{ site.author.github }}"
+                rel="nofollow noopener noreferrer"
+                ><i class="fab fa-fw fa-github" aria-hidden="true"></i>
+                GitHub</a
+              >
+            </li>
+            {% endif %} {% if site.author.googlescholar %}
+            <li>
+              <a
+                href="{{ site.author.googlescholar }}"
+                rel="nofollow noopener noreferrer"
+                ><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i>
+                Google Scholar</a
+              >
+            </li>
+            {% endif %} {% if site.author.email %}
+            <li>
+              <a
+                href="mailto:{{ site.author.email }}"
+                rel="nofollow noopener noreferrer"
+                ><i class="fas fa-fw fa-envelope-square" aria-hidden="true"></i>
+                Email</a
+              >
+            </li>
             {% endif %}
           </ul>
         </div>
 
         <div class="page__footer-copyright">
-          &copy; {{ site.time | date: '%Y' }} {{ site.author.name | default: site.title }}. All rights reserved.
-          <br>
+          &copy; {{ site.time | date: '%Y' }} {{ site.author.name | default:
+          site.title }}. All rights reserved.
+          <br />
           <small>
-            This website is powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> and hosted on <a href="https://pages.github.com" rel="nofollow">GitHub Pages</a>.
-            {% if site.repository %}
-              <br>Website source code available on <a href="https://github.com/{{ site.repository }}" rel="nofollow">GitHub</a>.
-            {% endif %}
+            This website is powered by
+            <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> and hosted
+            on
+            <a href="https://pages.github.com" rel="nofollow">GitHub Pages</a>.
+            {% if site.repository %} <br />Website source code available on
+            <a href="https://github.com/{{ site.repository }}" rel="nofollow"
+              >GitHub</a
+            >. {% endif %}
           </small>
         </div>
       </div>
-
     </div>
   </footer>
 </div>
