add last update date automatically show

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,6 +62,14 @@
             <a href="https://github.com/{{ site.repository }}" rel="nofollow"
               >GitHub</a
             >. {% endif %}
+            <br />
+            <span
+              id="last-update"
+              class="last-update-time"
+              style="display: none"
+            >
+              Last updated loading...
+            </span>
           </small>
         </div>
       </div>
