--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,6 @@
 <script src="assets/js/main.min.js"></script>
 <script src="assets/data/bibtex-data.js"></script>
 <script src="assets/js/bibtex-citation.js"></script>
+<script src="assets/js/last-update.js"></script>
 
 {% include analytics.html %} {% include fetch_google_scholar_stats.html %}
