回滚，修复对齐错误

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -141,7 +141,7 @@
   
   .page__footer-left {
     margin-right: 0;
-    margin-bottom: 2rem;
+    // margin-bottom: 2rem;
     min-width: auto;
     width: 100%;
     max-width: 400px;
