更新Last-update-date的后端：JS脚本->Jekyll插件，采用静态资源，避免频繁访问API

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -63,12 +63,9 @@
               >GitHub</a
             >. {% endif %}
             <br />
-            <span
-              id="last-update"
-              class="last-update-time"
-              style="display: none"
-            >
-              Last updated loading...
+            <span class="last-update-time">
+              Last updated on {{ site.github.last_commit.date | date: "%B %-d,
+              %Y" }}
             </span>
           </small>
         </div>
