调整文章图片宽度

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -57,7 +57,8 @@
         width: 100%;
         order: 2;
         img {
-            max-width: 400px;
+            width: 400px;
+            max-width: 100%;
             box-shadow: 3px 3px 6px #888;
             object-fit: cover;
         }
