--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,6 +41,10 @@
 @import "bibtex-citation";
 @import "print";
 
+// Paper box configuration variables
+$paper-box-image-width: 400px;
+$paper-box-padding: 2em;
+
 .paper-box {
     display: flex;
     justify-content: left;
@@ -48,7 +52,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     border-bottom: 1px #efefef solid;
-    padding: 2em 0 2em 0;
+    padding: $paper-box-padding 0 $paper-box-padding 0;
     
 
     .paper-box-image{
@@ -57,7 +61,7 @@
         width: 100%;
         order: 2;
         img {
-            width: 400px;
+            width: $paper-box-image-width;
             max-width: 100%;
             box-shadow: 3px 3px 6px #888;
             object-fit: cover;
@@ -72,15 +76,15 @@
     @include breakpoint($medium) {
         .paper-box-image{
             justify-content: left;
-            min-width: 200px;
-            max-width: 30%;
+            min-width: $paper-box-image-width;
+            max-width: $paper-box-image-width;
             order: 1;
         }
         
         .paper-box-text{
             justify-content: left;
-            padding-left: 2em;
-            max-width: 70%;
+            padding-left: $paper-box-padding;
+            max-width: calc(100% - #{$paper-box-image-width} - #{$paper-box-padding});
             order: 2;
         }
 
