--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -45,6 +45,10 @@
 $paper-box-image-width: 360px;
 $paper-box-padding: 2em;
 
+// Education box configuration variables
+$edu-box-image-width: 300px;
+$edu-box-image-height: 120px;
+
 .paper-box {
     display: flex;
     justify-content: left;
@@ -117,22 +121,30 @@ h1:before, .anchor:before {
 // Education box styles
 .edu-box {
     .paper-box-image {
-        min-width: 200px;
-        max-width: 200px;
+        min-width: $edu-box-image-width;
+        max-width: $edu-box-image-width;
+        height: $edu-box-image-height;
+        justify-content: center;
         display: flex;
         align-items: center;
         
         img {
             width: auto;
-            height: 80px;
-            box-shadow: none;
+            height: 100%;
+            max-width: 100%;
+            box-shadow: 3px 3px 6px #888;
             object-fit: contain;
         }
     }
     
     @include breakpoint($medium) {
+        .paper-box-image {
+            min-width: $edu-box-image-width;
+            max-width: $edu-box-image-width;
+        }
+        
         .paper-box-text {
-            max-width: calc(100% - 200px - #{$paper-box-padding});
+            max-width: calc(100% - #{$edu-box-image-width} - #{$paper-box-padding});
         }
     }
 }
