--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -118,7 +118,8 @@ blockquote {
 /* links */
 
 a {
-  
+  text-decoration: none;
+
   &:focus {
     @extend %tab-focus;
   }
@@ -126,6 +127,7 @@ a {
   &:hover,
   &:active {
     outline: 0;
+    text-decoration: underline;
   }
 }
 
